# WakkaQt

./: .gitignore  CMakeLists.txt  DownloadDialog.cpp  DownloadDialog.h  WakkaQt.desktop  audioamplifier.cpp  audioamplifier.h  audiorecorder.cpp  audiorecorder.h  audiovisualizerwidget.cpp  audiovisualizerwidget.h  audiovizmediaplayer.cpp  audiovizmediaplayer.h  complexes.cpp  complexes.h  ffmpegnative.cpp  ffmpegnative.h  librarydialog.cpp  librarydialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowDevicesMgr.cpp  mainwindowLibraryMgr.cpp  mainwindowPlaybackMgr.cpp  mainwindowRecorderMgr.cpp  mainwindowRenderMgr.cpp  mainwindowSeparatorMgr.cpp  native-tools.cmake  pitchmonitorwidget.cpp  pitchmonitorwidget.h  previewdialog.cpp  previewdialog.h  previewwebcam.cpp  previewwebcam.h  readme.md  resources.qrc  sessionmanager.cpp  sessionmanager.h  sndwidget.cpp  (+7 more)
cmake/: FindFFTW.cmake
